2010-10-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c, generic/tclClock.c, generic/tclEncoding.c,
	* generic/tclEnv.c, generic/tclLoad.c, generic/tclNamesp.c,
	* generic/tclObj.c, generic/tclRegexp.c, generic/tclResolve.c,
	* generic/tclResult.c, generic/tclUtil.c, macosx/tclMacOSXFCmd.c:
	More purging of strcpy() from locations where we already know the
	length of the data being copied.

2010-10-01  Kevin B. Kenny  <kennykb@acm.org>

	[dogeen-assembler-branch]

	* tests/assemble.test:
	* generic/tclAssemble.h:
	* generic/tclAssemble.c:  Added listIn, listNotIn, and dictGet.

2010-09-30  Kevin B. Kenny  <kennykb@acm.org>

	[dogeen-assembler-branch]

	* tests/assemble.test:   Added tryCvtToNumeric and several more list
	* generic/tclAssemble.c: operations.
	* generic/tclAssemble.h:

2010-09-29  Kevin B. Kenny  <kennykb@acm.org>

	[dogeen-assembler-branch]

	* tests/assemble.test:   Completed conversion of tests to a
	* generic/tclAssemble.c: "white box" structure that follows the
	C code. Added missing safety checks on the operands of 'over' and
	'reverse' so that negative operand counts don't smash the stack.

2010-09-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure:      re-generate with autoconf-2.59
	* win/configure:
	* generic/tclMain.c    make compilable with -DUNICODE as well

2010-09-28  Reinhard Max  <max@suse.de>

	Implementation of TIP #162, "IPv6 Sockets for Tcl"

	* doc/socket.n:         Document the changes to the [socket] and
			        [fconfigure] commands.

	* generic/tclInt.h:     Introduce TclCreateSocketAddress() as a
	* generic/tclIOSock.c:  replacement for the platform-dependent
	* unix/tclUnixSock.c:   TclpCreateSocketAddress() functions.
	* unix/tclUnixChan.c:   Extend the [socket] and [fconfigure]
	* unix/tclUnixPort.h:   commands to behave as proposed in
	* win/tclWinSock.c:     TIP #162.
	* win/tclWinPort.h:

	* compat/fake-rfc2553.c: A compat implementation of the APIs